style fix for accordions & added truncation for 'this is a solution/proposal' sections

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -81,3 +81,7 @@ html {
     right: 0;
     z-index: 10;
 }
+
+.accordion-header {
+  margin-bottom: 0.5rem !important;
+}
